--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/passport-jwt": "^3.0.8",
     "bcrypt": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
