--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/passport-jwt": "^3.0.8",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
     "passport": "^0.6.0",
